css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input[type=number] {
  -moz-appearance: textfield;
  width: 100%;
}

:root {
    --black-russian: #181928;
    --ebony-clay: #2f3045;
    --steel-gray: #1f1f2d;
    --rum: #6a668a;
    --white: #fff;
    --default-btn: #7e7da1;
    --primary: #03e1e4;
    --breakpoint-md: 768px;
    --breakpoint-lg: 992px;
    --breakpoint-xl: 1200px;
    --breakpoint-xxl: 1296px;
    --font-family-sans-serif: pixelSC,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
}

@font-face {
    font-family: pixelSC;
    src: url('../fonts/PixelOperatorSC.ttf');
}

body {
    background-color: var(--black-russian);
    color: var(--white);
    font-family: var(--font-family-sans-serif);
    font-size: 1.1rem;
}

a{
    color: var(--primary);
    text-decoration: none;
    
}

header {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    background-color: var(--ebony-clay);
    min-height: 6rem;
    font-size: 1.2rem;

    margin-bottom: .5rem;
    
}

h1 {
    margin: 0 1rem;
    text-align: center;
}

h1::before {
    content: "🐹 ";
}

h2, h3{
    display: none
}

nav {
    text-transform: uppercase;
    font-size: 1.3rem;
    margin-bottom: 1.2rem;
}

nav ul {
    display: flex;
    justify-content: center;
}

nav ul li {
    list-style: none;
}

nav ul li:hover{
    text-decoration: underline;
}

nav ul li:not(:first-child) {
    padding-left: .5rem;
    margin-left: .5rem;
    border-left: 1px solid var(--white);
}

main {
    margin: 0 1rem;
    margin-bottom: 1rem;
    display: flex;
    flex-direction: column;
}

main form {
    display: flex;
    flex-direction: column;
}

.form-group {
    margin-bottom: 1rem;
}

.form-group label {
    font-size: 1.2rem;
    display: block;
    margin-bottom: .4rem;
}

.form-group .label-wrapper label {
    margin-bottom: 0;
}

.label-wrapper {
    display: flex;
    margin-bottom: .4rem;
}

.label-wrapper img{
    width: 1.2rem;
    margin-right: .3rem;
}

hr{
    margin-bottom: 1rem;
}

.roller-input-group {
    display: flex;
}

.roller-input-number {
    background-color: var(--steel-gray);
    color: var(--white);
    border-radius: 4px 0 0 4px;
    border: 2px solid var(--rum);
    padding: 12px 14px;
    font-family: var(--font-family-sans-serif);
    font-size: 1.5rem;
}

.roller-input-number:focus {
    outline: none;
}

.form-container {
    margin-bottom: 1rem;
}

.roller-section {
    border: 1px solid var(--rum);
    background-color: var(--ebony-clay);
    padding: 24px 25px;
    border-radius: 4px;
}

.important {
    color: var(--primary);
}

.tree-dimensional-button {
    border-radius: 5px;
}

.tree-dimensional-button.btn-default {
    box-shadow: 0 6px #514e72, 0 10px #1f1f2c;
}

.tree-dimensional-button.btn-default input {
    -webkit-appearance: none;
    width: 100%;
    text-transform: uppercase;
    font-weight: bold;
    padding: .5rem 0;
    background-color: #8984b1;
    border: 1px solid #c3b0d0;
    outline: none;
    -webkit-tap-highlight-color: transparent;
    font-family: var(--font-family-sans-serif);
    color: var(--white);
    font-size: 1.6rem;
    border-radius: 5px;
    cursor: pointer;
}

.tree-dimensional-button:active {
    opacity: .7;
}

.tree-dimensional-button.btn-default input:active {
    transform: translateY(5px);
}

.table-responsive {
    display: flex;
    align-items: stretch;
    flex-direction: column;
}

.roller-table thead th {
    border: none;
    border-radius: 4px;
    background-color: #181928;
    padding: 8px 16px;
}

table {
    border-collapse: collapse;
}

table td, table th {
    padding: 8px 0;
}

table tbody tr td:first-child p {
    padding-left: 16px;
    border-left: 1px solid #6a668a;
    border-right: 1px solid #6a668a;
}

table tbody tr td:last-child p {
    padding-right: 16px;
    text-align: right;
    border-right: 1px solid #6a668a;
}

.roller-table tbody tr td {
    border-bottom: 1px solid #6a668a;
}

thead{
    font-size: 1.5rem;
}

tbody{
    font-size: 1.2rem;
}

.desired-coin{
    margin-top: .5rem;
}

.desired-coin-container{
    display: flex;
    justify-content: center;
}

.desired-coin-container img {
    width: 2.4rem;
}

.desired-coin-container .title-text{
    margin-left: .7rem;
}

.desired-coin-container .title-text p:first-child {
    font-weight: bold;
    font-size: 1.4rem;
}

footer {
    text-align: center;
}

footer ul li {
    list-style: none;
}

.top-footer{
    background-color: #1e1924;
    color: #938d9e;
    padding: .5rem;
}

.lang {
    margin-bottom: .5rem;
}

.bottom-footer{
    background-color: #2f3045;
    color: #938d9e;
    padding: .5rem;
}

.title {
    color: var(--white);
    font-size: 1.4rem;
    font-weight: bold;
    text-transform: uppercase;
    margin-bottom: .3rem;
}

.social-media img {
    width: 2.3rem;
}

.social-media img:hover {
    transform: translateY(-2px);
    transition: transform .25s;
}

.roller-select {
    /*-webkit-appearance: none;*/
    font-family: var(--font-family-sans-serif);
    outline: none;
    font-size: 1.2rem;
    border: 2px solid var(--rum);
    color: var(--white);
    background-color: var(--black-russian);
    border-radius: 4px;
    padding: .9rem;
    
    border-left: none;
    border-radius: 0 4px 4px 0;
}

@media (hover: hover) {
    .tree-dimensional-button:hover {
        opacity: .7;
    }
}

@media only screen and (min-width: 768px) {
    main {
        flex-direction: row;
        justify-content: space-evenly;
    }
    table tbody tr td p {
        padding: 0 .5rem;
    }
}

@media only screen and (min-width: 1200px) {
    main {
        flex-direction: row;
        justify-content: center;
    }

    .form-container {
        margin-right: 10rem;
    }
}

